[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-performance-api"
version = "1.0.0"
description = "API for predicting student performance based on quiz interaction data"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "gunicorn==23.0.0",
    "pydantic==2.11.7",
    "pandas==2.3.1",
    "scikit-learn==1.7.1",
    "xgboost==3.0.4",
    "numpy==2.3.2",
    "python-dateutil==2.9.0.post0"
]

[project.urls]
Homepage = "https://github.com/yourusername/student-performance-api"
Documentation = "https://github.com/yourusername/student-performance-api#readme"
Repository = "https://github.com/yourusername/student-performance-api.git"
Issues = "https://github.com/yourusername/student-performance-api/issues"
